--- a/Journey/Resources/pl.lproj/Journey.strings
+++ b/Journey/Resources/pl.lproj/Journey.strings
@@ -1,1 +1,4 @@
-"journeyListTitle" = "Moje podróże";
+"List/title" = "Moje podróże";
+"List/Empty/title" = "Brak podróży";
+"List/Empty/descrption" = "Aby dodać nową podróż naciśnij przycisk \"DODAJ\"";
+"List/Empty/action" = "DODAJ";
