--- a/Journey/Resources/en.lproj/Journey.strings
+++ b/Journey/Resources/en.lproj/Journey.strings
@@ -6,5 +6,6 @@
 "Create/Name/title" = "Journey name";
 "Create/Name/placeholder" = "Mountains, lakes, country e.g";
 "Create/Name/helper" = "Journey name should be at least 4 characters long. Should be unique across whole app";
-"Create/Name/Error/toShort" = "Journey name is too short";
+"Create/Name/Error/tooShort" = "Journey name is too short";
+"Create/Name/Error/tooLong" = "Journey name is too long";
 "Create/Name/Error/alreadyExists" = "Journey with this name already exists";
