--- a/Journey/Resources/pl.lproj/Journey.strings
+++ b/Journey/Resources/pl.lproj/Journey.strings
@@ -6,5 +6,6 @@
 "Create/Name/title" = "Nazwa prodóży";
 "Create/Name/placeholder" = "Góry, jezioro, kraj etc";
 "Create/Name/helper" = "Nazwa podróży powinna się składać z conajmniej 4 znaków. Powinna ona być unikalna dla całej aplikacji";
-"Create/Name/Error/toShort" = "Nazwa podróży jest za krótka";
+"Create/Name/Error/tooShort" = "Nazwa podróży jest za krótka";
+"Create/Name/Error/tooLong" = "Nazwa podróży jest za długa";
 "Create/Name/Error/alreadyExists" = "Podróż o podanej nazwie już istnieje";
