--- a/Journey/Resources/en.lproj/Journey.strings
+++ b/Journey/Resources/en.lproj/Journey.strings
@@ -9,3 +9,5 @@
 "Create/Name/Error/tooShort" = "Journey name is too short";
 "Create/Name/Error/tooLong" = "Journey name is too long";
 "Create/Name/Error/alreadyExists" = "Journey with this name already exists";
+"Create/People/title" = "People that will participate in journey";
+"Create/People/helper" = "Max 5 people";
