add string parameter generation

--- a/Journey/Resources/en.lproj/Journey.strings
+++ b/Journey/Resources/en.lproj/Journey.strings
@@ -4,16 +4,16 @@
 "Create/title" = "New journey";
 "Create/Name/title" = "Journey name";
 "Create/Name/placeholder" = "Mountains, lakes, country e.g";
-"Create/Name/helper" = "Journey name should be at least 4 characters long. Should be unique across whole app";
+"Create/Name/helper_minLength_maxLength" = "Journey name should be %@ to %@ characters long. Should be unique across whole app";
 "Create/Name/Error/tooShort" = "Journey name is too short";
 "Create/Name/Error/tooLong" = "Journey name is too long";
 "Create/Name/Error/alreadyExists" = "Journey with this name already exists";
 "Create/People/title" = "People that will participate in journey";
-"Create/People/helper" = "Max 5 people";
+"Create/People/helper_maxCount" = "Max %@ people";
 "Create/People/Name/me" = "Me";
 "Create/People/Name/add" = "Add";
 "Create/People/Name/placeholder" = "Participant";
-"Create/People/Name/helper" = "Participant name should be 2 to 20 characters long. Name should be unique across journey";
+"Create/People/Name/helper_minLength_maxLength" = "Participant name should be %@ to %@ characters long. Name should be unique across journey";
 "Create/People/Name/Error/tooShort" = "Participant name is too short";
 "Create/People/Name/Error/tooLong" = "Participant name is too long";
 "Create/People/Name/Error/alreadyExists" = "Participant with this name already exists";
