--- a/Journey/Resources/pl.lproj/Journey.strings
+++ b/Journey/Resources/pl.lproj/Journey.strings
@@ -4,16 +4,16 @@
 "Create/title" = "Nowa podróż";
 "Create/Name/title" = "Nazwa prodóży";
 "Create/Name/placeholder" = "Góry, jezioro, kraj etc";
-"Create/Name/helper" = "Nazwa podróży powinna się składać z conajmniej 4 znaków. Powinna ona być unikalna dla całej aplikacji";
+"Create/Name/helper_minLength_maxLength" = "Nazwa podróży powinna zawierać od %@ do %@ znaków. Powinna ona być unikalna dla całej aplikacji";
 "Create/Name/Error/tooShort" = "Nazwa podróży jest za krótka";
 "Create/Name/Error/tooLong" = "Nazwa podróży jest za długa";
 "Create/Name/Error/alreadyExists" = "Podróż o podanej nazwie już istnieje";
 "Create/People/title" = "People that will participate in journey";
-"Create/People/helper" = "Maksymalnie 5 uczestników";
+"Create/People/helper_maxCount" = "Maksymalnie %@ uczestników";
 "Create/People/Name/me" = "Ja";
 "Create/People/Name/add" = "Dodaj";
 "Create/People/Name/placeholder" = "Uczestnik";
-"Create/People/Name/helper" = "Nazwa uczestnika wycieczki powinna zawierać od 2 do 20 znaków. Powinna być unikalna w danej podróży";
+"Create/People/Name/helper_minLength_maxLength" = "Nazwa uczestnika wycieczki powinna zawierać od %@ do %@ znaków. Powinna być unikalna w danej podróży";
 "Create/People/Name/Error/tooShort" = "Nazwa uczestnika jest zbyt krótka";
 "Create/People/Name/Error/tooLong" = "Nazwa uczestnika jest zbyt długa";
 "Create/People/Name/Error/alreadyExists" = "Uczestnik o takiej nazwie już istnieje";
