--- a/Journey/Resources/pl.lproj/Journey.strings
+++ b/Journey/Resources/pl.lproj/Journey.strings
@@ -20,3 +20,5 @@
 "Details/Participant/all" = "Wszyscy";
 "Details/Expense/add" = "dodaj";
 "Details/Expense/title" = "Wydatki";
+"Details/Expense/Empty/title" = "Brak wydatków";
+"Details/Expense/Empty/description" = "";
